[package]
name = "retro_av"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
retro_core.workspace = true
rodio.workspace = true
image.workspace = true
libretro_sys.workspace = true
generics.workspace = true
winit.workspace = true
glutin.workspace = true
raw-window-handle.workspace = true
glutin-winit.workspace = true

[build-dependencies]
cfg_aliases.workspace = true
gl_generator.workspace = true
